Skip to content

segfault when fingerprinting current playing opus track

[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x00007ffff6c6a644 in _int_free (av=0x7fffb0000020, p=0x7fffb0038990, have_lock=0) at malloc.c:3982
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x00007ffff794bc78 in block_generic_Release (block=0x7fffb00389a0) at misc/block.c:107
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0x00007fffc658a925 in block_Release (p_block=0x7fffb00389a0) at ../../include/vlc_block.h:166
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  transcode_audio_process (p_stream=0x7fffbc047668, id=id@entry=0x7fffb0005db0, in=0x7fffb00399e0, 
    out=out@entry=0x7fffc46abd68) at transcode/audio.c:226
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0x00007fffc65879bd in Send (p_stream=0x7fffbc047668, id=0x7fffb0005db0, p_buffer=<optimized out>)
    at transcode/transcode.c:657
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0x00007ffff7971056 in sout_InputSendBuffer (p_input=0x7fffb0005d90, p_buffer=p_buffer@entry=
    0x7fffbcc69060) at stream_output/stream_output.c:233
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0x00007ffff790a0a4 in DecoderPlaySout (p_sout_block=0x7fffbcc69060, p_dec=0x7fffbcc5e1c8)
    at input/decoder.c:1677
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  DecoderProcessSout (p_block=0x0, p_dec=0x7fffbcc5e1c8) at input/decoder.c:1799
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  DecoderProcess (p_dec=p_dec@entry=0x7fffbcc5e1c8, p_block=p_block@entry=0x7fffbcc6a9a0)
    at input/decoder.c:2000
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0x00007ffff790aa04 in DecoderThread (p_data=0x7fffbcc5e1c8) at input/decoder.c:946
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x00007ffff71b1d15 in start_thread (arg=0x7fffc46ac700) at pthread_create.c:308
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x00007ffff6ce053d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114
(gdb) bt full
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x00007ffff6c6a644 in _int_free (av=0x7fffb0000020, p=0x7fffb0038990, have_lock=0) at malloc.c:3982
        size = 4032
        fb = <optimized out>
        nextchunk = 0x7fffb0039950
        nextsize = 1392
        nextinuse = 0
        prevsize = <optimized out>
        bck = 0x7fffb00399e0
        fwd = 0x0
        errstr = 0x0
        locked = <optimized out>
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x00007ffff794bc78 in block_generic_Release (block=0x7fffb00389a0) at misc/block.c:107
        __PRETTY_FUNCTION__ = "block_generic_Release"
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0x00007fffc658a925 in block_Release (p_block=0x7fffb00389a0) at ../../include/vlc_block.h:166
No locals.
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  transcode_audio_process (p_stream=0x7fffbc047668, id=id@entry=0x7fffb0005db0, in=0x7fffb00399e0, 
    out=out@entry=0x7fffc46abd68) at transcode/audio.c:226
        p_sys = 0x7fffbc048160
        p_block = <optimized out>
        p_audio_buf = 0x7fffb00389a0
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0x00007fffc65879bd in Send (p_stream=0x7fffbc047668, id=0x7fffb0005db0, p_buffer=<optimized out>)
    at transcode/transcode.c:657
---Type <return> to continue, or q <return> to quit--- 
        p_sys = <optimized out>
        p_out = 0x7fffb0039960
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0x00007ffff7971056 in sout_InputSendBuffer (p_input=0x7fffb0005d90, p_buffer=p_buffer@entry=
    0x7fffbcc69060) at stream_output/stream_output.c:233
        p_sout = 0x7fffbc000b98
        i_ret = <optimized out>
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0x00007ffff790a0a4 in DecoderPlaySout (p_sout_block=0x7fffbcc69060, p_dec=0x7fffbcc5e1c8)
    at input/decoder.c:1677
        b_has_more = false
        b_reject = false
        p_owner = 0x7fffbcc65ce0
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  DecoderProcessSout (p_block=0x0, p_dec=0x7fffbcc5e1c8) at input/decoder.c:1799
        p_next = 0x0
        p_owner = 0x7fffbcc65ce0
        p_sout_block = <optimized out>
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  DecoderProcess (p_dec=p_dec@entry=0x7fffbcc5e1c8, p_block=p_block@entry=0x7fffbcc6a9a0)
    at input/decoder.c:2000
        p_owner = 0x7fffbcc65ce0
        b_flush_request = <optimized out>
        __PRETTY_FUNCTION__ = "DecoderProcess"
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0x00007ffff790aa04 in DecoderThread (p_data=0x7fffbcc5e1c8) at input/decoder.c:946
        canc = 0
---Type <return> to continue, or q <return> to quit---
        p_block = <optimized out>
        p_dec = 0x7fffbcc5e1c8
        p_owner = 0x7fffbcc65ce0
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x00007ffff71b1d15 in start_thread (arg=0x7fffc46ac700) at pthread_create.c:308
        __res = <optimized out>
        pd = 0x7fffc46ac700
        now = <optimized out>
        unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140736488720128, -455959287696277630, 1, 
    140736360569408, 140736488720128, 18, 455870323866386306, 455977675429560194}, mask_was_saved = 
 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
    not_first_call = 0
    pagesize_m1 = <optimized out>
    sp = <optimized out>
    freesize = <optimized out>

#11 (closed) 0x00007ffff6ce053d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114 No locals.

}}}

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information