opus: update i_buffer when memmoving decoder output

Fixes #9343

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>